--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 anyhow = "1.0.79"
 crossterm = "0.27.0"
 ratatui = "0.25.0"
+serde = { version = "1.0" , features = ["derive"] }
+serde_json = "1.0.111"
