--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ crossterm = "0.27.0"
 ratatui = "0.25.0"
 serde = { version = "1.0" , features = ["derive"] }
 serde_json = "1.0.111"
+tui-textarea = "0.4.0"
