--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
+chrono = "0.4.35"
 crossterm = "0.27.0"
 ratatui = "0.26.0"
 serde = { version = "1.0" , features = ["derive"] }
