--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ crossterm = "0.27.0"
 ratatui = "0.26.0"
 serde = { version = "1.0" , features = ["derive"] }
 serde_json = "1.0.113"
-tui-textarea = "0.4.0"
+tui-prompts = "0.3.5"
