--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.81"
 automerge = "0.5.9"
+autosurgeon = "0.8.3"
 chrono = "0.4.37"
 crossterm = "0.27.0"
 ratatui = "0.26.2"
