automerge baby step

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
+        "automerge",
+        "autosurgeon",
         "chrono",
         "crossterm",
         "Datelike",
