--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ ratatui = "0.26.2"
 serde = { version = "1.0" , features = ["derive"] }
 serde_json = "1.0.115"
 tui-prompts = "0.3.8"
+
+[dev-dependencies]
+automerge-test = "0.4.3"
