--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ chrono = "0.4.37"
 crossterm = "0.27.0"
 ratatui = "0.26.2"
 tui-prompts = "0.3.8"
+uuid = "1.8.0"
 
 [dev-dependencies]
 automerge-test = "0.4.3"
