--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ autosurgeon = "0.8.3"
 chrono = "0.4.37"
 crossterm = "0.27.0"
 ratatui = "0.26.2"
+smol_str = "0.2.1"
 tui-prompts = "0.3.8"
 
 [dependencies.uuid]
