--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.86"
 automerge = "0.5.11"
 autosurgeon = "0.8.3"
 chrono = "0.4.38"
+crokey = "1.0.0"
 crossterm = "0.27.0"
 ratatui = "0.26.3"
 tui-prompts = "0.3.12"
