--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ autosurgeon = "0.8.3"
 chrono = "0.4.38"
 crokey = "1.0.0"
 crossterm = "0.27.0"
+dirs = "5.0.1"
 ratatui = "0.26.3"
 tui-prompts = "0.3.12"
 
