Fix save file loading

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.86"
 automerge = "0.5.11"
 autosurgeon = "0.8.4"
 chrono = "0.4.38"
+cli-log = "2.0.0"
 crokey = "1.0.0"
 crossterm = "0.27.0"
 dirs = "5.0.1"
