--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ crokey = "1.0.0"
 crossterm = "0.27.0"
 dirs = "5.0.1"
 ratatui = "0.26.3"
+thiserror = "1.0.61"
 tui-prompts = "0.3.12"
 
 [dependencies.uuid]
