--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ crokey = "1.0.0"
 crossterm = "0.27.0"
 dirs = "5.0.1"
 ratatui = "0.26.3"
+serde = "1.0.203"
 thiserror = "1.0.61"
+toml = "0.8.14"
 tui-prompts = "0.3.12"
 
 [dependencies.uuid]
