--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ cli-log = "2.0.0"
 crokey = "1.0.0"
 crossterm = "0.27.0"
 dirs = "5.0.1"
+im = "15.1.0"
+itertools = "0.13.0"
 ratatui = "0.26.3"
 serde = "1.0.203"
 thiserror = "1.0.61"
