--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ autosurgeon = "0.8.5"
 chrono = "0.4.38"
 cli-log = "2.0.0"
 crokey = "1.0.1"
-crossterm = "0.27.0"
 dirs = "5.0.1"
 im = "15.1.0"
 itertools = "0.13.0"
@@ -20,7 +19,7 @@ ratatui = "0.27.0"
 serde = "1.0.206"
 thiserror = "1.0.63"
 toml = "0.8.19"
-tui-prompts = "0.3.20"
+tui-prompts = "=0.3.20"
 
 [dependencies.uuid]
 version = "1.10.0"
