--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,9 +1,9 @@
 name: "Test Suite"
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "xilem" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "xilem" ]
 
 env:
   CARGO_TERM_COLOR: always
