Use Xilem from git

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ serde = "1.0.206"
 thiserror = "1.0.63"
 toml = "0.8.19"
 tui-prompts = "=0.3.20"
-xilem = "0.1.0"
+xilem = { git = "https://github.com/linebender/xilem", rev = "b7f98ba" }
 
 [dependencies.uuid]
 version = "1.10.0"
@@ -29,7 +29,7 @@ features = [
 ]
 
 [patch.crates-io]
-xilem.path = "../xilem/xilem"
+# xilem.path = "../xilem/xilem"
 
 [dev-dependencies]
 automerge-test = "0.4.3"
