--- a/sift-egui/Cargo.toml
+++ b/sift-egui/Cargo.toml
@@ -13,3 +13,5 @@ eframe = "0.28.1"
 egui_extras = { version = "0.28.1", features = [ "image" ] }
 env_logger = "0.11.5"
 anyhow = "1.0.86"
+chrono = "0.4.38"
+itertools = "0.13.0"
