--- a/sift-egui/Cargo.toml
+++ b/sift-egui/Cargo.toml
@@ -9,6 +9,7 @@ workspace = true
 [dependencies]
 sift-core = { path = "../sift-core" }
 sift-persist = { path = "../sift-persist" }
+sift-state= { path = "../sift-state" }
 eframe = "0.28.1"
 egui_extras = { version = "0.28.1", features = [ "image" ] }
 env_logger = "0.11.5"
