Disable workspace support for formatting commands
The --all arg to fmt takes care of traversing the workspace.

See also:
https://github.com/sagiegurari/cargo-make?tab=readme-ov-file#disabling-workspace-support

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,12 +1,14 @@
 [tasks.format-check]
 description = "Fix code formatting"
 toolchain = "nightly"
+workspace = false
 command = "cargo"
 args = ["fmt", "--all", "--check"]
 
 [tasks.format]
 description = "Fix code formatting"
 toolchain = "nightly"
+workspace = false
 command = "cargo"
 args = ["fmt", "--all"]
 
