--- a/sift-iced/Cargo.toml
+++ b/sift-iced/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+sift-core = { path = "../sift-core" }
+sift-persist = { path = "../sift-persist" }
+sift-state= { path = "../sift-state" }
+anyhow = "1.0.86"
 
 [dependencies.iced]
 git = "https://github.com/iced-rs/iced.git"
