--- a/sift-xilem/Cargo.toml
+++ b/sift-xilem/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 sift-core = { path = "../sift-core" }
 sift-persist = { path = "../sift-persist" }
 sift-state= { path = "../sift-state" }
-xilem = { rev = "bd83ed2", git = "https://github.com/linebender/xilem.git" }
+xilem = { git = "https://github.com/linebender/xilem.git" }
 
 [lints]
 workspace = true
